[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neolook_themes"
version = "0.1.7"
description = "Neotec Themes: Website & Desk themes with an enhanced theme switcher for Frappe."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Neotec Integrated Solutions Private Limited", email = "support@example.com" }]
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
include = ["neolook_themes*"]

[tool.setuptools.package-data]
neolook_themes = [
  "public/js/*.js",
  "website_theme/**/**/*.json",
  "fixtures/*.json"
]



